--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
         Header Section End
     ---------------------->
 
-    <!-- Courses Section Start   -->
+    <!--------------------
+     Courses Section Start
+    --------------------->
+
     <section class="container my-5">
       <div class="headline w-50 mx-auto my-5 text-center ">
         <h1>
@@ -217,7 +220,56 @@
           <button class="btn btn-primary">See More Courses</button>
         </div>
     </section>
-    <!-- Courses Section End   -->
+  
+    <!--------------------
+       Courses Section End  
+      ------------------->
+
+      <!---------------------- 
+        Login Section Start 
+      ----------------------->
+ 
+        <section class="container">
+          <div class="bg-info d-lg-flex justify-content-around align-items-center my-5 rounded" style="min-height: 250px;">
+            <div class="text text-light text-lg-start text-md-center text-sm-center text-center">
+              <h1>Ready to join?</h1>
+              <p>It is a long established fact that a reader will be distracted by the readable content <br> of a page when looking at its layout.</p>
+            </div>
+            <div class="button text-center">
+              <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  Login Now
+                </button>
+  
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Login Form</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <form action="">
+                          <input type="emile" placeholder="Emile">
+                          <br>
+                          <input type="password" placeholder="Password">
+                        </form>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Login</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </section>
+
+      <!---------------------
+       Login Section End
+      ---------------------->
 
 
     <!-- js link  -->
