student section add

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     --------------------->
 
     <section class="container my-5">
-      <div class="headline w-50 mx-auto my-5 text-center ">
+      <div class="headline w-50 mx-auto my-3 text-center ">
         <h1>
           Discover Our Popular Courses
         </h1>
@@ -216,7 +216,7 @@
               </div>
             </div>
         </div>
-        <div class="button text-center my-5">
+        <div class="button text-center mt-2 mb-5">
           <button class="btn btn-primary">See More Courses</button>
         </div>
     </section>
@@ -229,7 +229,7 @@
         Login Section Start 
       ----------------------->
  
-        <section class="container">
+        <section class="container my-5">
           <div class="bg-info d-lg-flex justify-content-around align-items-center my-5 rounded" style="min-height: 250px;">
             <div class="text text-light text-lg-start text-md-center text-sm-center text-center">
               <h1>Ready to join?</h1>
@@ -270,6 +270,62 @@
       <!---------------------
        Login Section End
       ---------------------->
+
+      <!-----------------------
+         Students Section Start 
+      ------------------------>
+
+        <section class="container my-5">
+          <div class="headline my-3">
+            <h1>Meet Our Successfull Students</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content <br> of a page when looking at its layout.</p>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/student/student-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Awlad Hossain</h5>
+                  <p class="card-text">UIUX Designer</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/student/student-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Jannatul Islam</h5>
+                  <p class="card-text">Motion Design</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/student/student-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Imran Hossain</h5>
+                  <p class="card-text">Graphic Designer</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/student/student-4.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Nishi Akter</h5>
+                  <p class="card-text">Web Developer</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="button text-center mt-3 mb-5">
+            <button class="btn btn-primary">View All</button>
+          </div>
+        </section>
+
+      <!-----------------------
+         Students Section End 
+      ------------------------>
 
 
     <!-- js link  -->
