--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       <!-----------------------
         Questions Section Start  
       ------------------------>
-      <section class="container w-50 my-5">
+      <section class="container w-75 my-5">
         <div class="headline text-center">
           <h1>Frequently Asked Questions</h1>
           <p>It is a long established fact that a reader will be distracted by the readable content <br> of a page when looking at its layout.</p>
@@ -390,6 +390,35 @@
         Questions Section End  
       ------------------------>
 
+      <!------------------------------ 
+        Trusted Companies Section Start
+      -------------------------------->
+        <section class="container my-5 d-none d-lg-flex flex-column">
+          <h1 class="text-center my-4">Trusted over 800+ companies</h1>
+          <div class="all-companies d-flex justify-content-around">
+            <div class="companies">
+              <img class="w-75" src="img/company/company-1.png" alt="">
+            </div>
+            <div class="companies">
+              <img class="w-75" src="img/company/company-2.png" alt="">
+            </div>
+            <div class="companies">
+              <img class="w-75" src="img/company/company-3.png" alt="">
+            </div>
+            <div class="companies">
+              <img class="w-75" src="img/company/company-4.png" alt="">
+            </div>
+            <div class="companies">
+              <img class="w-75" src="img/company/company-5.png" alt="">
+            </div>
+            <div class="companies">
+              <img class="w-75" src="img/company/company-6.png" alt="">
+            </div>
+          </div>
+        </section>
+      <!------------------------------ 
+        Trusted Companies Section End
+      -------------------------------->
 
 
     <!-- js link  -->
