--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Udemy Learning</title>
     <!-- Bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
+    <!-- Google Icon -->
+    <script src="https://kit.fontawesome.com/4bc88e7341.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!----------------------
@@ -419,6 +420,26 @@
       <!------------------------------ 
         Trusted Companies Section End
       -------------------------------->
+
+    <!-------------------- 
+      Footer Section Start
+    --------------------->
+      <footer class="w-100 bg-dark d-flex align-items-center justify-content-center" style="height: 300px;">
+          <div class="text-center text-light">
+            <h2>UDEMY LEARNING</h2>
+            <p>Office 41, Zawaya Buildin, Ghala Muscat,<br> Sultanate of Oman</p>
+            <p>Privacy Ploicy | Terms of use</p>
+            <div class="icon">
+              <i class="fa-brands fa-facebook p-2 bg-secondary rounded-4"></i>
+              <i class="fa-brands fa-youtube p-2 bg-secondary rounded-4"></i>
+              <i class="fa-brands fa-twitter p-2 bg-secondary rounded-4"></i>
+              <i class="fa-brands fa-linkedin p-2 bg-secondary rounded-4"></i>
+            </div>
+          </div>
+      </footer>
+    <!-------------------- 
+      Footer Section End
+    --------------------->
 
 
     <!-- js link  -->
